--- a/auditors/views/menu.xml
+++ b/auditors/views/menu.xml
@@ -7,17 +7,29 @@
         sequence="15"
         groups="auditors.group_manager,auditors.group_user"/>
 
-    <menuitem id="auditors_menu"
-        name="External Auditors"
-        parent="auditors_main_menu"
-        sequence="10"
-        groups="auditors.group_manager,auditors.group_user"/>
+        <menuitem id="auditors_auditors_menu"
+            name="External Auditors"
+            parent="auditors_main_menu"
+            sequence="10"
+            groups="auditors.group_manager,auditors.group_user"/>
 
-        <menuitem id="auditors_year_menu"
-            name="External Auditors List"
-            parent="auditors_menu"
-            sequence="5"
-            action="auditors.partner_list_action"/>
+            <menuitem id="auditors_auditors_year_menu"
+                name="External Auditors List"
+                parent="auditors_auditors_menu"
+                sequence="5"
+                action="auditors.partner_list_action"/>
+
+        <menuitem id="auditors_configuration"
+            name="Configuration"
+            parent="auditors_main_menu"
+            sequence="15"
+            groups="auditors.group_manager"/>
+
+            <menuitem id="auditors_configuration_institution"
+                name="Institutions"
+                parent="auditors_configuration"
+                sequence="5"
+                action="auditors.institution_list_action"/>
 
 </data>
 </openerp>
