[FIX] Auditor gender information

--- a/auditors/views/partner_views.xml
+++ b/auditors/views/partner_views.xml
@@ -40,7 +40,7 @@
             <field name="gender"
                    position="after">
                 <field name="civil_status" />
-            </field> -->
+            </field>
             <xpath expr="//group"
                    position="inside">
                 <group name="auditor_years"
