--- a/auditors/views/auditors_menus.xml
+++ b/auditors/views/auditors_menus.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <menuitem id="auditors_menu_root"
-              name="Auditors"
-              sequence="15"
-              action="partner_action_form"
-              groups="group_manager,group_user" />
+    <menuitem id="auditors_menu"
+        name="Auditors"
+        sequence="15"
+        action="partner_action_view_form"
+        groups="group_manager,group_user" />
 
-    <menuitem id="tmc_menu_config_auditors"
-              name="Auditors"
-              parent="tmc.tmc_menu_config"
-              sequence="15"/>
+    <menuitem id="auditors_config_menu"
+        name="Auditors"
+        parent="tmc.tmc_config_menu"
+        sequence="15" />
 
 </odoo>
