--- a/auditors/views/partner_views.xml
+++ b/auditors/views/partner_views.xml
@@ -98,7 +98,7 @@
     </record>
 
     <!-- WINDOW ACTION -->
-    <record id="partner_action_form"
+    <record id="partner_action_view_form"
         model="ir.actions.act_window">
         <field name="name">Auditors</field>
         <field name="res_model">res.partner</field>
